# ok-ww-automator

./: .gitignore  AGENTS.md  LICENSE  README.md  README_en.md  README_zh.md  main.py  pyproject.toml
docs/: config.md  config_zh.md  models.md  models_zh.md  notices.md  notices_zh.md  ok-launcher.md  ok-launcher_zh.md  runners.md  runners_zh.md  scheduler.md  scheduler_zh.md  sheets.md  sheets_zh.md  waves-api.md  waves-api_zh.md
env/: .env.example
src/ok_ww_automator/: __init__.py  config.py  env_discovery.py  game_attempt.py  game_clients.py  healthchecks.py  models.py  notices.py  ok_launcher.py  ok_main.py  runners.py  scheduler.py  sheets.py  time_utils.py  updater.py  waves_api.py
src/ok_ww_automator/notice_templates/: daily_task.html  stamina_task.html
src/ok_ww_automator/ok_tasks/: __init__.py  fast_farm_echo.py  five_to_one.py  stamina.py  ui_boxes.py
src/ok_ww_automator/ok_tasks/char/: __init__.py  cartethyia.py
tests/: test_config.py  test_env_discovery.py  test_game_clients.py  test_healthchecks.py  test_models.py  test_notices.py  test_ok_launcher.py  test_ok_main.py  test_runners.py  test_scheduler.py  test_sheets.py  test_sheets_cli.py  test_time_utils.py  test_updater.py  test_waves_api.py
windows/: daily_task.xml  stamina_task.xml
